fixed overflow in wan tabs

--- a/dhgui/src/app/wan/components/task-forces/task-forces.component.scss
+++ b/dhgui/src/app/wan/components/task-forces/task-forces.component.scss
@@ -1,7 +1,7 @@
 .force-container {
     overflow: auto;
     min-height: calc(100% - 64px);
-    height: calc(100% - 64px);
+    max-height: 49vh;
 }
 
 .force {
