--- a/dhgui/src/app/wan/components/wan-members-view/wan-members-view.component.scss
+++ b/dhgui/src/app/wan/components/wan-members-view/wan-members-view.component.scss
@@ -1,5 +1,5 @@
 .topology-container {
-    height: 100%;
+    max-height: 49vh;
     overflow: auto;
 }
 
