--- a/dhgui/src/app/wan/components/wan/wan.component.scss
+++ b/dhgui/src/app/wan/components/wan/wan.component.scss
@@ -65,5 +65,5 @@ mat-tab {
 }
 
 .select-content {
-    margin-top: -25px;
+    margin-top: -15px;
 }
